[tool.poetry]
name = "nonebot-plugin-likeabi"
version = "0.2.1"
description = "在自动回复的基础上加入好感度和每日回复上限"
authors = ["MerCuJerry & lgc2333 <lgc2333@126.com> "]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
nonebot2 = ">=2.0.0rc1"
pydantic = "^1.10.4"
nonebot-adapter-onebot = ">=2.1.0"
typing-extensions = "^4.4.0"
xpinyin = ">=0.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
